[package]
name = "post"
version = "0.1.0"
edition = "2024"

[dependencies]
color-print = "0.3.7"
markdown-frontmatter = "0.4.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
